# clone

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  Package.swift  RENDER.md  aquax-sdk.json  flake.nix
Sources/AVFoundation/: AVAudioSession.swift  AVPlayer.swift  AVPlayerItem.swift  AVQueuePlayer.swift  CMTime.swift
Sources/AVKit/: AVKit.swift
Sources/AppKit/: AppKitStubs.swift  NSColor.swift  NSOpenPanel.swift
Sources/Apps/: main.swift
Sources/CAudio/: shim.c
Sources/CEngine/: module.modulemap
Sources/CSQLite/: shim.c
Sources/Charts/: Charts.swift
Sources/CloneClient/: AppClient.swift
Sources/CloneDaemon/: DaemonServer.swift
Sources/CloneKeychain/: KeychainAccessControl.swift  KeychainServer.swift  KeychainStore.swift
Sources/CloneProtocol/: Messages.swift
Sources/CloneServer/: CompositorServer.swift
Sources/CloneText/: CoreTextAPI.swift  clone_text.swift  clone_textFFI.h
Sources/CoreText/: TextMeasurement.swift
Sources/DesktopKit/: Animation.swift  AppRegistry.swift  CommandFlattener.swift  Component.swift  Desktop.swift  Dock.swift  Finder.swift  GeometryReader.swift  Layout.swift  MenuBar.swift  Reconciler.swift  State.swift  Types.swift  ViewBuilder.swift  ViewDSL.swift  ViewNode.swift  WindowManager.swift
Sources/DockApp/: DockApp.swift  main.swift
Sources/EngineBridge/: AppConnectionManager.swift  Bridge.swift  ChromeRenderer.swift  InputRouter.swift  WindowServer.swift  clone_engine.swift
Sources/FinderApp/: FinderApp.swift  main.swift
Sources/KeychainServices/: KeychainClient.swift  OSStatus.swift  SecConstants.swift  SecItem.swift
Sources/LoginWindowApp/: LoginWindowApp.swift
Sources/MediaPlayer/: MediaPlayer.swift
Sources/MenuBarApp/: MenuBarApp.swift  main.swift
Sources/PasswordApp/: PasswordApp.swift
Sources/SettingsApp/: SettingsApp.swift  main.swift
Sources/SwiftDataMacros/: SwiftDataMacros.swift
Sources/SwiftUI/: Animation.swift  App.swift  CommandFlattener.swift  ContextMenuRegistry.swift  Desktop.swift  Dock.swift  Environment.swift  Font.swift  GeometryReader.swift  GeometryTypes.swift  Gestures.swift  Gradient.swift  HoverRegistry.swift  Layout.swift  MenuBar.swift  MenuRegistry.swift  Observable.swift  ObservableObject.swift  OnChangeRegistry.swift  PhosphorIcons.swift  PreviewMacro.swift  Reconciler.swift  Scene.swift  ScrollRegistry.swift  Shape.swift  State.swift  StateGraph.swift  Styles.swift  TagRegistry.swift  TapRegistry.swift  TextFieldRegistry.swift  TextMeasurer.swift  Types.swift  View.swift  ViewBuilder.swift  ViewDSL.swift  ViewModifier.swift  ViewNode.swift  WindowChrome.swift  WindowGroup.swift  (+2 more)
Sources/UniformTypeIdentifiers/: UniformTypeIdentifiers.swift
aep/: shared-gpu-surfaces.md
audio/: Cargo.toml
audio/src/: decoder.rs  ffi.rs  lib.rs  output.rs  player.rs  stream.rs
docs/: mkdocs.yml
docs/docs/: docker.md  (+11 more)
engine/: Cargo.toml
engine/src/: commands.rs  ffi.rs  lib.rs  render_server.rs  surface_compositor.rs  text_measure.rs  window.rs
engine/src/audio/: commands.rs  mod.rs
engine/src/renderer/: blur.rs  compositor.rs  icon.rs  mod.rs  rect.rs  shadow.rs  text.rs  types.rs  wallpaper.rs
engine/src/shaders/: blur_up.wgsl  composite.wgsl  composite_window.wgsl  genie_window.wgsl  rect.wgsl  sdf_roundrect.wgsl  shadow.wgsl  text_sdf.wgsl
nix/: clone-desktop.nix  configuration.nix  lima.yaml
render/: Cargo.toml  assets
render/src/: commands.rs  ffi.rs  headless.rs  lib.rs
render/src/renderer/: blur.rs  icon.rs  image.rs  mod.rs  rect.rs  shadow.rs  text.rs  wallpaper.rs
render/src/shaders/: blur_down.wgsl  icon.wgsl  image.wgsl  rect.wgsl  sdf_roundrect.wgsl  text_sdf.wgsl  wallpaper.wgsl
render/tests/: headless_test.rs
scripts/: build-sdk.sh  linux-dev.sh
text/: Cargo.toml
wgpu-iosurface/: Cargo.toml  build.rs
wgpu-iosurface/src/: iosurface.rs  lib.rs  texture.rs
wgpu-iosurface/tests/: fileport_test.rs
wgpu-shared-surface/: Cargo.toml  build.rs
wgpu-shared-surface/src/: lib.rs  linux.rs  texture.rs
wgpu-shared-surface/tests/: cross_process_test.rs  shared_texture_test.rs
(+269 files in other folders)
