[workspace]
members = ["engine", "render", "wgpu-shared-surface", "audio", "text"]
resolver = "2"

# wgpu-iosurface is macOS-only — not a workspace member.
# It's pulled in via [target.'cfg(target_os = "macos")'.dependencies]
# in engine/Cargo.toml and render/Cargo.toml.

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
strip = true
panic = "abort"
