[package]
name = "clone-audio"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
cpal = "0.15"
symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "isomp4"] }
uniffi = { version = "0.31", features = ["cli"] }
ringbuf = "0.4"
log = "0.4"
thiserror = "1"
parking_lot = "0.12"

[dev-dependencies]
env_logger = "0.11"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
