[package]
name = "clone-engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
wgpu = "28"
winit = "0.30"
uniffi = { version = "0.31", features = ["cli"] }
pollster = "0.4"
bytemuck = { version = "1.4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
thiserror = "1"
cosmic-text = "0.12"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
rustc-hash = "2"
resvg = "0.44"
include_dir = "0.7"

[dev-dependencies]
pollster = "0.4"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[[bin]]
name = "clone-desktop"
path = "src/bin/desktop.rs"
