[package]
name = "wgpu-shared-surface"
version = "0.1.0"
edition = "2024"
description = "Cross-platform GPU surface sharing for wgpu — IOSurface on macOS, shared memory on Linux"

[dependencies]
wgpu = "29"
log = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
wgpu-hal = { version = "29", features = ["metal"] }
wgpu-types = "29"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSDictionary", "NSValue"] }
objc2-metal = { version = "0.3", features = ["MTLDevice", "MTLTexture", "MTLPixelFormat", "MTLResource", "MTLTypes"] }

[target.'cfg(target_os = "macos")'.build-dependencies]
cc = "1"

[dev-dependencies]
pollster = "0.4"
libc = "0.2"
